--- a/static/css/style.css
+++ b/static/css/style.css
@@ -477,7 +477,19 @@ main.home {
     font-weight: normal;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 992px) {
+    .schedule .time {
+        flex: 1;
+    }
+    .schedule .title {
+        flex: 2;
+    }
+    .schedule .row {
+        gap: 0.5rem;
+    }
+}
+
+@media (max-width: 768px) {
     .schedule .row {
         flex-direction: column-reverse;
         gap: 0.6rem;
