Express gratitude to swung

--- a/templates/home.html
+++ b/templates/home.html
@@ -199,14 +199,17 @@
         <a href="{{ config.extra.birs.url }}">{{ config.extra.birs.slang }}</a>
       </div>
     </div>
-    <p>
-      <img src="images/swung.png" alt="Software Underground" style="width: 450px;">
-    </p>
-    <p>
-      Special thanks to
-      <a href="https://www.softwareunderground.org">Software Underground</a>
-      for the support!
-    </p>
+    <div class="text-center">
+      <img src="images/swung.png" alt="Software Underground" style="width: 450px; margin-bottom: 1em;">
+      <p style="max-width: 556px; margin-left: auto; margin-right: auto">
+        Special thanks to
+        <a href="https://www.softwareunderground.org">Software Underground</a>
+        for funding
+        <a href="https://github.com/softwareunderground/swung-org/blob/main/proposals/02_birs-financial-support.md">
+          travel grants to our participants</a>,
+        for hosting this website and for all the support!
+      </p>
+    </div>
   </section>
 </main>
 
