--- a/templates/home.html
+++ b/templates/home.html
@@ -206,7 +206,7 @@
         <a href="https://www.softwareunderground.org">Software Underground</a>
         for funding
         <a href="https://github.com/softwareunderground/swung-org/blob/main/proposals/02_birs-financial-support.md">
-          travel grants to our participants</a>,
+          travel grants for participants</a>,
         for hosting this website and for all the support!
       </p>
     </div>
