--- a/templates/home.html
+++ b/templates/home.html
@@ -92,6 +92,25 @@
       </p>
     </div>
 
+    <!-- Carousel -->
+    <div class="carousel" style="margin-top: 3rem; margin-bottom: 2rem;">
+      <!-- The images in the carousel -->
+      {% for photo in section.extra.photos %}
+      <div class="carousel-images fade">
+        <img src="{{ photo }}" style="width:100%">
+      </div>
+      {% endfor %}
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      <!-- The dots/circles -->
+      <div class="dots text-center">
+        {% for i in range(end=section.extra.photos | length) %}
+        <span class="dot" onclick="currentSlide({{ i + 1 }})"></span>
+        {% endfor %}
+      </div>
+    </div>
+
     <div class="information">
       <div class="flex-1">
         <h3>
